[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-garden"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.scripts]
token-garden = "token_garden.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["token_garden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
